force-app/main/default/objects/Deal_Opportunity_Policy__mdt/Deal_Opportunity_Policy__mdt.object-meta.xml
<CustomObject><label
  >Deal Opportunity Policy</label><pluralLabel
  >Deal Opportunity Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>