force-app/main/default/objects/Deal_Opportunity_Policy__mdt/fields/Allow_Multiple_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Opportunities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Multiple Opportunities</label>
    <type>Checkbox</type>
</CustomField>