force-app/main/default/objects/Deal_Opportunity_Policy__mdt/fields/Creation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Creation_Mode__c</fullName>
    <description>Create New, Link Existing, Create or Link, External Managed, or
  Disabled. This org's actual registration flow (partner picks from an
  existing Opportunity; internal Lead conversion creates one moments
  before registration) is Link Existing - see the Default record and
  Sprint 39's Known Adaptation #1.</description>
    <label>Creation Mode</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>