force-app/main/default/objects/Deal_Opportunity_Policy__mdt/fields/Creation_Timing__c.field-meta.xml
<CustomField>
    <fullName>Creation_Timing__c</fullName>
    <description
  >When DealOpportunityCommandService.createOpportunityForDeal is allowed
  to run: On Deal Submission, After Conflict Clearance, After Deal
  Approval, After Protection Activation, Manual, or External System
  (never created by PartnerSync).</description>
    <label>Creation Timing</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>