force-app/main/default/objects/Deal_Opportunity_Policy__mdt/fields/Maximum_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Opportunities__c</fullName>
    <label>Maximum Opportunities</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>